package voldemort;

option java_package = "voldemort.protocol.pb";
option optimize_for = SPEED;

message ClockEntry {
  required int32 node_id = 1;
  required int64 version = 2;
}

message VectorClock {
  repeated ClockEntry entries = 1;
  optional int64 timestamp = 2;
}

message Versioned {
  required bytes value = 1;
  required VectorClock version = 2;
}

message Error {
  required int32 error_code = 1;
  required string error_message = 2;
}

message KeyedVersions {
  required bytes key = 1;
  repeated Versioned versions = 2;
}

message GetRequest {
  optional int32 from_node = 1 [default = -1];
  optional bool should_route = 2 [default = false];
  repeated bytes ids = 3;
}

message GetResponse {
  repeated KeyedVersions items = 1;
  optional Error error = 2;
}

message PutRequest {
  optional int32 from_node = 1 [default = -1];
  optional int32 to_node = 2 [default = -1];
  optional bool should_route = 3 [default = false];
  optional bytes key = 4;
  optional Versioned versioned = 5;
}

message PutResponse {
  optional Error error = 1;
}

message DeleteRequest {
  optional int32 from_node = 1 [default = -1];
  optional int32 to_node = 2 [default = -1];
  optional bool should_route = 3 [default = false];
  optional bytes key = 4;
  optional VectorClock version = 5;
}

message DeleteResponse {
  optional bool success = 1;
  optional Error error = 2;
}

enum RequestType {
  GET = 0;
  PUT = 1;
  DELETE = 2;
}

message VoldemortRequest {
  required RequestType type = 1;
  optional GetRequest get = 2;
  optional PutRequest put = 3;
  optional DeleteRequest delete = 4;
}